# rholive

./: .gitignore  AUDIO_SEGMENTATION.md  Cargo.toml  GEMINI_LIVE_API.md  IMPLEMENTATION_PLAN.md  README.md  UI_DOCUMENTATION.md  XCAP_DOCUMENTATION.md  repomix-output.txt
src/: audio.rs  audio_async.rs  audio_capture.rs  audio_seg.rs  broker.rs  events.rs  gemini.rs  gemini_client.rs  gemini_ws.rs  gemini_ws_json.rs  gemini_ws_unified.rs  main.rs  media_event.rs  recorder.rs  screen.rs  simple_turn_fsm.rs  simple_turn_runner.rs  ui.rs  util.rs  video_capture.rs  ws_writer.rs
src/media_in/: audio.rs  mod.rs  video.rs
