[package]
name = "rholive"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rholive"
path = "src/main.rs"




[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
xcap = { version = "0.6.0", features = ["image"] }
libpulse-simple-binding = "2.28"
libpulse-binding = "2.30"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
base64 = "0.22.1"
thiserror = "2.0.12"
chrono = "0.4"
image = { version = "0.25.6", features = ["jpeg"] }
turbojpeg = "1.0"
egui_window_glfw_passthrough = "0.9.0"
egui_glow = "0.29.1" # Add egui_glow for rendering
egui = "0.29.1"
glow = "0.16.0"
bytemuck = "1.14.3"
smallvec = "1"

# Audio segmentation dependencies
webrtc-vad = "0.4.0"
whisper-rs = "0.14.2"  # Using default features - intel-mkl feature not available
hound = "3.5.1"
rand = "0.9.1"  # For WAV handling in tests
rtrb = "0.3"  # Lock-free ring buffer for audio

